--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
